@@ -1,3 +1,4 @@
+	census summary added
 	mailto form added
 	html headers standardized
 	Random image added to index page
